--- a/ENSIKLO/ENSIKLO/ENSIKLO.UWP/ENSIKLO.UWP.csproj
+++ b/ENSIKLO/ENSIKLO/ENSIKLO.UWP/ENSIKLO.UWP.csproj
@@ -13,7 +13,7 @@
     <DefaultLanguage>en-US</DefaultLanguage>
     <TargetPlatformIdentifier>UAP</TargetPlatformIdentifier>
     <TargetPlatformVersion>10.0.19041.0</TargetPlatformVersion>
-    <TargetPlatformMinVersion>10.0.16299.0</TargetPlatformMinVersion>
+    <TargetPlatformMinVersion>10.0.18362.0</TargetPlatformMinVersion>
     <MinimumVisualStudioVersion>14</MinimumVisualStudioVersion>
     <EnableDotNetNativeCompatibleProfile>true</EnableDotNetNativeCompatibleProfile>
     <FileAlignment>512</FileAlignment>
@@ -104,11 +104,19 @@
     </AppxManifest>
   </ItemGroup>
   <ItemGroup>
+    <Content Include="Assets\3-vertical-dots.png" />
     <Content Include="Assets\account_circle.png" />
     <Content Include="Assets\bookmarks.png" />
     <Content Include="Assets\house_active.png" />
     <Content Include="Assets\local_mall.png" />
     <Content Include="Assets\logo.png" />
+    <Content Include="Assets\SplashScreen.scale-125.png" />
+    <Content Include="Assets\SplashScreen.scale-150.png" />
+    <Content Include="Assets\SplashScreen\SplashScreenEnsiklo1240x600.png" />
+    <Content Include="Assets\SplashScreen\SplashScreenEnsiklo2480x1200.png" />
+    <Content Include="Assets\SplashScreen\SplashScreenEnsiklo620x300.png" />
+    <Content Include="Assets\SplashScreen\SplashScreenEnsiklo775x375.png" />
+    <Content Include="Assets\SplashScreen\SplashScreenEnsiklo930x450.png" />
     <Content Include="Properties\Default.rd.xml" />
     <Content Include="Assets\LargeTile.scale-100.png" />
     <Content Include="Assets\LargeTile.scale-200.png" />
@@ -152,6 +160,12 @@
     </Page>
   </ItemGroup>
   <ItemGroup>
+    <PackageReference Include="Acr.UserDialogs">
+      <Version>7.2.0.562</Version>
+    </PackageReference>
+    <PackageReference Include="Rg.Plugins.Popup">
+      <Version>2.1.0</Version>
+    </PackageReference>
     <PackageReference Include="Xamarin.Forms" Version="5.0.0.2196" />
     <PackageReference Include="Microsoft.NETCore.UniversalWindowsPlatform" Version="6.2.12" />
     <PackageReference Include="Xamarin.Essentials" Version="1.7.0" />
