--- a/ENSIKLO/ENSIKLO/ENSIKLO/ENSIKLO.csproj
+++ b/ENSIKLO/ENSIKLO/ENSIKLO/ENSIKLO.csproj
@@ -35,6 +35,9 @@
     <EmbeddedResource Update="Views\CatalogPage.xaml">
       <Generator>MSBuild:UpdateDesignTimeXaml</Generator>
     </EmbeddedResource>
+    <EmbeddedResource Update="Views\LibraryDeletePopupPage.xaml">
+      <Generator>MSBuild:UpdateDesignTimeXaml</Generator>
+    </EmbeddedResource>
     <EmbeddedResource Update="Views\LibraryDetailPage.xaml">
       <Generator>MSBuild:UpdateDesignTimeXaml</Generator>
     </EmbeddedResource>
