--- a/ENSIKLO/ENSIKLO/ENSIKLO/ENSIKLO.csproj
+++ b/ENSIKLO/ENSIKLO/ENSIKLO/ENSIKLO.csproj
@@ -11,6 +11,8 @@
     <PackageReference Include="Microsoft.Extensions.DependencyInjection.Abstractions" Version="6.0.0" />
     <PackageReference Include="Microsoft.Extensions.Http" Version="6.0.0" />
     <PackageReference Include="Rg.Plugins.Popup" Version="2.1.0" />
+    <PackageReference Include="supabase-csharp" Version="0.4.1" />
+    <PackageReference Include="Syncfusion.Xamarin.SfPdfViewer" Version="20.1.0.50" />
     <PackageReference Include="System.Text.Json" Version="6.0.2" />
     <PackageReference Include="Xamarin.Forms" Version="5.0.0.2196" />  
     <PackageReference Include="Xamarin.Essentials" Version="1.7.0" />
@@ -27,6 +29,9 @@
 
   <ItemGroup>
     <EmbeddedResource Update="Views\BookDetailPage.xaml">
+      <Generator>MSBuild:UpdateDesignTimeXaml</Generator>
+    </EmbeddedResource>
+    <EmbeddedResource Update="Views\BookReaderPage.xaml">
       <Generator>MSBuild:UpdateDesignTimeXaml</Generator>
     </EmbeddedResource>
     <EmbeddedResource Update="Views\BooksPage.xaml">
